crates/agm-core/src/diff/snapshots/agm_core__diff__render__tests__render_markdown_empty_report.snap
---
source: crates/agm-core/src/diff/render.rs
expression: output
---
# AGM Semantic Diff

## Summary

| Metric | Count |
|---|---|
| Nodes added | 0 |
| Nodes removed | 0 |
| Nodes modified | 0 |
| Nodes unchanged | 0 |
| Header changes | 0 |
| **Breaking changes** | No |
