crates/agm-core/src/diff/snapshots/agm_core__diff__render__tests__render_text_empty_report.snap
---
source: crates/agm-core/src/diff/render.rs
expression: output
---
=== AGM Semantic Diff ===

--- Summary ---
  Added: 0 | Removed: 0 | Modified: 0 | Unchanged: 0
  Breaking changes: NO
