crates/agm-core/src/diff/snapshots/agm_core__diff__render__tests__render_text_full_report.snap
---
source: crates/agm-core/src/diff/render.rs
expression: output
---
=== AGM Semantic Diff ===

--- Header Changes ---
  ~ version: "0.1.0" -> "0.2.0" (info)

--- Nodes Added (1) ---
  + auth.mfa

--- Nodes Removed (1) ---
  - auth.legacy [BREAKING]

--- Nodes Modified (2) ---
  ~ auth.login (2 changes, 1 breaking)
    ~ type: workflow -> rules [BREAKING]
    ~ summary: old summary -> new summary (minor)
  ~ auth.session (1 change)
    + priority: critical (info)

--- Summary ---
  Added: 1 | Removed: 1 | Modified: 2 | Unchanged: 5
  Breaking changes: YES
